Fixed bug, when images not displayed on mobile phones

--- a/src/app/home/components/header-section/header-section.component.scss
+++ b/src/app/home/components/header-section/header-section.component.scss
@@ -22,3 +22,9 @@
     }
   }
 }
+
+@include breakpoint-to($xl) {
+  .header-section {
+    background-attachment: scroll;
+  }
+}
